# gimme-shelter

./: .dockerignore  .gitignore  Dockerfile  LICENSE.txt  README.md  fly.toml  pyproject.toml  requirements.txt  template.env
src/gimme_shelter/: __about__.py  client.py  interfaces.py  prompt.py  prompt_handler.py  request.py  server.py
tests/: __init__.py
