[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "gimme-shelter"
dynamic = ["version"]
description = 'Webtool that uses LLM to write inquiries about free flats in Berlin.'
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
keywords = ["AI", "LLM", "Stramlit"]
authors = [{ name = "Max Vieweg", email = "max.vieweg@outlook.com" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = ["streamlit", "aleph-alpha-client"]

[project.urls]
Documentation = "https://github.com/DSMaVie/gimme-shelter#readme"
Issues = "https://github.com/DSMaVie/gimme-shelter/issues"
Source = "https://github.com/DSMaVie/gimme-shelter"

[tool.hatch.version]
path = "src/gimme_shelter/__about__.py"

[tool.hatch.envs.default.scripts]
serve = ["streamlit run src/gimme_shelter/server.py"]

[tool.ruff.lint]
select = ["ALL"]
ignore = ["E501", "TD003"]
